[gd_scene load_steps=3 format=3 uid="uid://g7v8o2bvme4a"]

[ext_resource type="Script" path="res://Tool/scripts/map_editor.gd" id="1_3lig5"]
[ext_resource type="Script" path="res://Tool/scripts/camera_map_editor.gd" id="2_i7ou6"]

[node name="MapEditor" type="Node2D"]
script = ExtResource("1_3lig5")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" type="Node2D" parent="CanvasLayer"]

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 860.0
offset_top = 340.0
offset_right = 1060.0
offset_bottom = 640.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3

[node name="Button3" type="Button" parent="CanvasLayer/UI"]
offset_left = 878.0
offset_top = 461.0
offset_right = 1039.0
offset_bottom = 501.0
text = "Load Tileset"

[node name="Label" type="Label" parent="CanvasLayer/UI"]
offset_left = 869.0
offset_top = 347.0
offset_right = 970.0
offset_bottom = 363.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Tilemap Size:"

[node name="SpinBox" type="SpinBox" parent="CanvasLayer/UI"]
offset_left = 868.0
offset_top = 367.0
offset_right = 1058.0
offset_bottom = 394.0
min_value = 1.0
value = 1.0

[node name="Button" type="Button" parent="CanvasLayer/UI"]
offset_left = 865.0
offset_top = 560.0
offset_right = 1055.0
offset_bottom = 617.0
text = "Create"

[node name="Button2" type="Button" parent="CanvasLayer/UI"]
offset_left = 877.0
offset_top = 413.0
offset_right = 1038.0
offset_bottom = 453.0
text = "Load Tiles"

[node name="ItemList" type="ItemList" parent="CanvasLayer"]
visible = false
custom_minimum_size = Vector2(200, 400)
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_bottom = 200.0
grow_horizontal = 0
grow_vertical = 2
fixed_icon_size = Vector2i(30, 30)

[node name="Button" type="Button" parent="CanvasLayer/ItemList"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -36.0
offset_top = -41.0
offset_right = 37.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 0
text = "Save"

[node name="Panel" type="Panel" parent="CanvasLayer"]
visible = false
custom_minimum_size = Vector2(200, 400)
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 40.0
offset_bottom = 20.0
grow_vertical = 2

[node name="ItemList2" type="ItemList" parent="CanvasLayer"]
custom_minimum_size = Vector2(200, 400)
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_vertical = 2
item_count = 1
fixed_icon_size = Vector2i(30, 30)
item_0/text = "Obstacles"
item_0/selectable = false

[node name="CheckBox" type="CheckBox" parent="CanvasLayer"]
offset_top = 743.0
offset_right = 199.0
offset_bottom = 761.0
keep_pressed_outside = true
text = "Player Spawn"

[node name="CheckBox2" type="CheckBox" parent="CanvasLayer"]
offset_top = 764.0
offset_right = 199.0
offset_bottom = 782.0
keep_pressed_outside = true
text = "Creature Spawn"

[node name="Button" type="Button" parent="CanvasLayer"]
offset_top = 784.0
offset_right = 202.0
offset_bottom = 824.0
text = "Save"

[node name="Button2" type="Button" parent="CanvasLayer"]
offset_top = 827.0
offset_right = 202.0
offset_bottom = 867.0
text = "Clear"

[node name="tiles" type="Node" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
script = ExtResource("2_i7ou6")

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open File(s)"
initial_position = 1
size = Vector2i(362, 400)
ok_button_text = "Open"
dialog_hide_on_ok = true
file_mode = 1
access = 2
filters = PackedStringArray("*.tscn")

[connection signal="pressed" from="CanvasLayer/UI/Button3" to="." method="_load_tileset"]
[connection signal="value_changed" from="CanvasLayer/UI/SpinBox" to="." method="_on_spin_box_value_changed"]
[connection signal="pressed" from="CanvasLayer/UI/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="CanvasLayer/UI/Button2" to="." method="_on_button_2_pressed"]
[connection signal="item_selected" from="CanvasLayer/ItemList" to="." method="_on_item_selected"]
[connection signal="mouse_entered" from="CanvasLayer/ItemList" to="." method="_on_item_list_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/ItemList" to="." method="_on_item_list_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/ItemList/Button" to="." method="_save_grid_to_file"]
[connection signal="item_selected" from="CanvasLayer/ItemList2" to="." method="_on_item_list_2_item_selected"]
[connection signal="mouse_entered" from="CanvasLayer/ItemList2" to="." method="_on_item_list_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/ItemList2" to="." method="_on_item_list_mouse_exited"]
[connection signal="toggled" from="CanvasLayer/CheckBox" to="." method="_on_check_box_toggled"]
[connection signal="toggled" from="CanvasLayer/CheckBox2" to="." method="_on_check_box_2_toggled"]
[connection signal="pressed" from="CanvasLayer/Button" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="CanvasLayer/Button2" to="." method="_on_button_4_pressed"]
[connection signal="files_selected" from="FileDialog" to="." method="_on_file_dialog_files_selected"]
